--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nike Website</title>
+    <title>Atlas Website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -53,7 +53,7 @@ Where innovation meets strength, making every step unforgettable. Rise Above.</p
          <p class="subtitle">Discover our latest collection of stylish and comfortable shoes, crafted for every occasion.</p>
         <div class="card-container">
           <div class="card">
-            <img src="/images/Air-jordan-1.png" alt="jorden1">
+            <img src="/images/Air-jordan-1.webp" alt="jorden1">
             <div class="card-content">
               <h3>Air-jordan-1</h3>
               <span>Men's Shoes</span>
@@ -67,7 +67,7 @@ Where innovation meets strength, making every step unforgettable. Rise Above.</p
           </div>
 
           <div class="card">
-            <img src="/images/jordan-spizike.png" alt="jordan-fadeaway">
+            <img src="/images/jordan-Fadeaway.webp" alt="jordan-fadeaway">
             <div class="card-content">
               <h3>jordan-Fadeaway</h3>
               <span>Men's Shoes</span>
@@ -82,7 +82,7 @@ Where innovation meets strength, making every step unforgettable. Rise Above.</p
           </div>
 
           <div class="card">
-            <img src="/images/jordan-Fadeaway.png" alt="jordan-spizike">
+            <img src="/images/jordan-spizike.png" alt="jordan-spizike">
             <div class="card-content">
               <h3>jordan-spizike</h3>
               <span>Women's Shoes</span>
